# rviz2_cloud_annotation

./: README.md
rviz_3d_view_controller/: CMakeLists.txt  package.xml
rviz_3d_view_controller/rviz_plugin/: plugin_description.xml
rviz_3d_view_controller/src/: rviz_orbit3d_view_controller.cpp  rviz_orbit3d_view_controller.h
rviz_cloud_annotation/: CMakeLists.txt  package.xml
rviz_cloud_annotation/launch/: example.launch
rviz_cloud_annotation/rviz/: annotation.rviz
rviz_cloud_annotation/rviz_plugin/: plugin_description.xml
rviz_cloud_annotation/src/: rviz_cloud_annotation.cpp  rviz_cloud_annotation.h  rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_plugin.cpp  rviz_cloud_annotation_plugin.h  rviz_select_tool.cpp  rviz_select_tool.h
rviz_cloud_annotation/src/rviz_cloud_annotation_points/: CMakeLists.txt  point_neighborhood.h  point_neighborhood_search.cpp  point_neighborhood_search.h  rviz_cloud_annotation_c_interface.cpp  rviz_cloud_annotation_c_interface.h  rviz_cloud_annotation_definitions.h  rviz_cloud_annotation_point_plane.h  rviz_cloud_annotation_points.cpp  rviz_cloud_annotation_points.h  rviz_cloud_annotation_points_io.cpp  rviz_cloud_annotation_test.cpp  rviz_cloud_annotation_undo.h
